--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -1,8 +1,35 @@
 /* CSS Document */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,700|Open+Sans+Condensed:700);
 
-#myCalculator { margin: 0; padding: 0; font-size: 16px; font-family: 'Open Sans', sans-serif; font-weight: 300; line-height: 24px; max-width: 800px; }
+#myCalculator {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  line-height: 24px;
+  max-width: 800px;
+}
 
+#myCalculator main {
+  background-color: #444;
+}
 
-/* CSS rules go here */
+#myCalculator main section {
+  width: 25%;
+  float: left;
+  text-align: center;
+  padding-top: 110px;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center 5px;
+  background-size: 63px 100px;
+}
 
+/* Put empty content after the main tag and
+   clear the float left of the section tags. */
+#myCalculator main::after {
+  content: '';
+  display: block;
+  clear: both;
+}
