feat: Style the form elements

--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -96,3 +96,32 @@
   color: rgba(255,255,255,.5);
   padding-left: 4px;
 }
+
+/* Styles for the form elements. */
+#myCalculator form {
+  background-color: #000;
+  margin: 0;
+  padding: 10px 0px;
+}
+
+/* Don't show the line breaks by default. Later rule with show them on small
+   screens.*/
+#myCalculator form br {
+  display: none;
+}
+
+/* Put the 3 form sections on one row with a float left. */
+#myCalculator form > div {
+  color: #fff;
+  width: 33%;
+  float: left;
+  text-align: center;
+  padding: 10px 0 5px 0;
+}
+
+/* Clear the float lefts after the form. */
+#myCalculator form::after {
+  content: '';
+  display: block;
+  clear: both;
+}
