--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -166,3 +166,38 @@
 #myCalculator form select::-ms-expand {
   display: none;
 }
+
+/* Styling for small screens (e.g. phones) */
+@media screen and (max-width: 500px) {
+
+  #myCalculator {
+    font-size: 15px;
+  }
+
+  #myCalculator main section {
+    background-size: 45px 71px;
+    padding-top: 80px;
+  }
+
+  #myCalculator main h4 {
+    margin: 0;
+    font-size: .75em;
+    letter-spacing: 0;
+  }
+
+  #myCalculator main p {
+    font-size: 1.1em;
+  }
+
+  #myCalculator main p + p {
+    font-size: 1em;
+  }
+
+/* Place the "per year" on a separate line */
+  #myCalculator main p + p::after {
+      display: block;
+      margin-top: -10px;
+      color: #fff;
+  }
+
+}
