feat: Style form for small screen sizes

--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -167,6 +167,7 @@
   display: none;
 }
 
+
 /* Styling for small screens (e.g. phones) */
 @media screen and (max-width: 500px) {
 
@@ -198,6 +199,33 @@
       display: block;
       margin-top: -10px;
       color: #fff;
+  }
+
+
+/*
+ * Styling of the form elements for small screens.
+ */
+  #myCalculator form h4 {
+      font-size: 1.1em;
+      margin: 0;
+  }
+
+  #myCalculator form p {
+      font-size: .8em;
+      line-height: 14px;
+  }
+
+  #myCalculator form br {
+      display: inline;
+  }
+
+  #myCalculator form input[type=number] {
+      width: 30px;
+      font-size: .8em;
+  }
+
+  #myCalculator form select {
+      font-size: .8em;
   }
 
 }
