--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,700|Open+Sans+Condensed:700);
 
 #myCalculator {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
